--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-notifications": "^1.7.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
